removed excess, disabled mac os button

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,6 +9,16 @@ body {
     /*-webkit-text-fill-color: beige;*/
 }
 
+#disabled-tooltip {
+    background-color: #2d2d2d;
+    border-radius: 5px;
+    padding: 5px;
+    text-align: center;
+    color: rgb(255, 255, 255);
+    width: fit-content;
+    display: none;
+}
+
 #root-div {
     position: relative;
 }
@@ -23,6 +33,11 @@ button {
     padding-bottom: 5px;
     margin: 5px;
     -webkit-text-fill-color: black;
+}
+
+button:disabled {
+    background-color: rgba(156, 8, 38, 0.733);
+    -webkit-text-fill-color: rgba(0, 0, 0, 0.452);
 }
 
 .command {
