--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,16 +9,6 @@ body {
     /*-webkit-text-fill-color: beige;*/
 }
 
-#disabled-tooltip {
-    background-color: #2d2d2d;
-    border-radius: 5px;
-    padding: 5px;
-    text-align: center;
-    color: rgb(255, 255, 255);
-    width: fit-content;
-    display: none;
-}
-
 #root-div {
     position: relative;
 }
@@ -73,11 +63,7 @@ pre, code {
     overflow-x: auto;
 }
 
-#mac-os-x-page {
-    overflow-x: auto;
-}
-
-#mac-os-x-body {
+#linux-os-body {
     margin-top: 5px;
 }
 
